force-app/main/default/objects/Visit_Participant__c/Visit_Participant__c.object-meta.xml
<CustomObject>
    <label>拜访参与者</label>
    <nameField>
        <displayFormat>VPT-{00000}</displayFormat>
        <label>Visit Participant No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>