force-app/main/default/objects/Visit_Participant__c/fields/Customer_Participant_Position_del__c.field-meta.xml
<CustomField>
    <fullName>Customer_Participant_Position_del__c</fullName>
    <label>Customer Participant Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>