force-app/main/default/objects/Visit_Participant__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Visit</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Visit Participant</relationshipLabel>
    <relationshipName>Visit_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>