force-app/main/default/objects/Visit_Participant__c/fields/Hisense_Participant__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hisense Participant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Do Not Select Yourself !</errorMessage>
        <filterItems>
            <field>$User.Username</field>
            <operation>notEqual</operation>
            <valueField>User.Username</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Participant</relationshipName>
    <type>Lookup</type>
</CustomField>