force-app/main/default/objects/Visit_Participant__c/fields/Hisense_Participant_Email__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Participant_Email__c</fullName>
    <label>Hisense Participant Email</label>
    <type>Email</type>
</CustomField>