force-app/main/default/objects/Visit_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <description>参与人姓名
海信和客户人员名字的合集</description>
    <formula>Hisense_Participant__r.User_Full_Name__c +  Customer_Participant__r.FirstName  +  Customer_Participant__r.LastName</formula>
    <label>Participant</label>
    <type>Text</type>
</CustomField>