force-app/main/default/objects/Visit_Participant__c/fields/Visi_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Visi_Customer_Name__c</fullName>
    <formula>Customer_Visit__r.Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visi Customer Name</label>
    <type>Text</type>
</CustomField>