force-app/main/default/objects/Visit_Participant__c/fields/Visit_Category__c.field-meta.xml
<CustomField>
    <fullName>Visit_Category__c</fullName>
    <formula>Text(Customer_Visit__r.Visit_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Category</label>
    <type>Text</type>
</CustomField>