force-app/main/default/objects/Visit_Participant__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <formula>Customer_Visit__r.Visit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>