force-app/main/default/objects/Visit_Participant__c/fields/Visit_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_Owner_ID__c</fullName>
    <formula>Customer_Visit__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Owner ID</label>
    <type>Text</type>
</CustomField>