force-app/main/default/objects/Visit_Participant__c/fields/Visit_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Participant_Name__c</fullName>
    <formula>Hisense_Participant__r.LastName &amp; Hisense_Participant__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Participant Name</label>
    <type>Text</type>
</CustomField>