force-app/main/default/objects/Visit_Participant__c/fields/Visit_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Record_Name__c</fullName>
    <formula>Customer_Visit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Record Name</label>
    <type>Text</type>
</CustomField>