force-app/main/default/objects/Visit_Participant__c/recordTypes/Hisense_Participant.recordType-meta.xml
<RecordType>
    <fullName>Hisense_Participant</fullName>
    <active>true</active>
    <label>Hisense Participant</label>
</RecordType>