force-app/main/default/objects/Visit_Participant__c/validationRules/partipantCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>partipantCheck</fullName>
    <active>true</active>
    <errorConditionFormula>(Customer_Visit__r.Customer__c   &lt;&gt;  Customer_Participant__r.AccountId)&amp;&amp;  NOT(ISBLANK(Customer_Participant__c) )</errorConditionFormula>
    <errorDisplayField>Customer_Participant__c</errorDisplayField>
    <errorMessage>Must be the visit customer contact!</errorMessage>
</ValidationRule>